vm/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rhel9-server-svc
  # namespace: ocp-virt-app
spec:
  ports:
  - port: 22
    targetPort: 22
    protocol: TCP
  type: ClusterIP
  selector:
    vm.kubevirt.io/name: rhel9-server
