vm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhel9-server-rute
  namespace: ocp-virt-app
spec:
  to:
    kind: Service
    name: rhel9-server-svc
  port:
    targetPort: 22
